nginx-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hotelier-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: hotelier.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hotelier-entrypoint
                port:
                  number: 5555
